# secgpt

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY_20260427.md  ITERATION4_FINAL_VERIFICATION.md  ITERATION4_SUMMARY.md  ITERATION5_SUMMARY.md  README.md  REVIEW_REPORT_20260425.md  VERIFICATION_SUMMARY_20260425.md  WEEK1_2_OPTION4_SUMMARY.md  docker-compose.yml  docker_entrypoint.sh  pyproject.toml  test_audit_manual.py  test_integration_manual.py  test_report_manual.py  test_rules_manual.py  test_tui_import.py  test_validation_manual.py  verify_iteration4.py
.github/workflows/: ci-cd.yml  sonarqube.yml
docs/: AUTHENTICATED_CRAWLING_GUIDE.md  PAYLOAD_GENERATION_GUIDE.md
frontend/: index.html
pentest_agent/: paths.py
pentest_agent/analysis/: __init__.py  determinism.py  intent.py  kb_retrieval.py  prompt.py  query_planner.py
pentest_agent/api/: __init__.py  cli_runner.py  main.py
pentest_agent/auth/: __init__.py  handlers.py  manager.py
pentest_agent/cli/: cmd_analysis.py  cmd_chat.py  cmd_config.py  cmd_crawl.py  cmd_daemon.py  cmd_graphql.py  cmd_ingest.py  cmd_init.py  cmd_kb.py  cmd_payload.py  cmd_report.py  cmd_scope.py  cmd_sessions.py  cmd_show.py  cmd_status.py  cmd_template.py  cmd_websocket.py  external_confirm.py  main.py
pentest_agent/config/: manager.py
pentest_agent/crawl/: __init__.py  crawler.py  discovery.py
pentest_agent/daemon/: __main__.py  (+4 more)
tests/: test_determinism_regression.py  test_e2e_integration.py  test_e2e_streamlined.py  test_e2e_workflow.py  test_iteration5_hardening.py  verify_iteration3.py
(+41 files in other folders)
