[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pentest-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12.0",
    "tomli-w>=1.0.0",
    "rich>=13.0.0",
]

[project.scripts]
agent = "pentest_agent.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["pentest_agent"]
