[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pentest-agent"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12.0",
    "tomli-w>=1.0.0",
    "rich>=13.0.0",
    "chromadb>=0.5.0",
    "stix2>=3.0.0",
    "markdown-it-py>=3.0.0",
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "google-generativeai>=0.8.0",
]

[project.optional-dependencies]
local = ["llama-cpp-python>=0.2.0"]

[project.scripts]
agent = "pentest_agent.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["pentest_agent"]
